# web-slinger

./: CHANGELOG.md  Cargo.toml  README.md  web-slinger.cabal
examples/: main.rs
src/: Lib.hs  lib.rs
