[package]
name = "web-slinger"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
full = ["dep:wry", "dep:winit"]

[dependencies]
wry = { version = "0.35.0", optional = true }
winit = { version = "0.29", optional = true, features = [ "rwh_05" ] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
